complete backend auth
