# src/api/index.schemas.ts
@@ -9,10 +9,6 @@ export interface SignInRequest {
   password: string;
 }
 
-export interface SignInResponse {
-  token: string;
-}
-
 export type UserRole = typeof UserRole[keyof typeof UserRole];
 
 
@@ -28,9 +24,5 @@ export interface SignUpRequest {
   name?: string | null;
   password: string;
   role: UserRole;
-}
-
-export interface SignUpResponse {
-  token: string;
 }
 
